# SoniqueBay

./: .blackboxignore  .blackboxrules  .dockerignore  .env.example  .env.supabase.example  .gitignore  .kilocodeignore  AGENTS.md  Dockerfile.base  README.md  _version_.py  agents.md  alembic.ini  blackbox_mcp_settings.json  conftest.py  debug_worker_session.py  docker-compose-scan-optimized.yml  docker-compose.yml  find.exe.stackdump  fix_docker_compose.py  main.py  music.db  pr_body.md  pyproject.toml  requirements-common.txt  requirements.txt  test_model_persistence.py  test_results.txt  test_scan_task.py  test_similar_artists.py
.continue/: config.json
.githooks/: pre-commit.bat
.github/: gemini-instructions.md  pull_request_template.md
alembic/: env.py
backend/: .env  Dockerfile  api_app.py  base.Dockerfile  celery_app.py  database.py  music_scan.py  refac.md  requirements.txt  scrobbling.py  search.py  start_api.py  suggestion.py  task_system.py
backend_worker/: Dockerfile  __init__.py  api_app.py  celery_app.py  celery_beat_config.py  celery_config_source.py  celery_tasks.py  covers_tasks.py  entrypoint.sh  feature_flags.py  requirements.txt  setup.py  taskiq_app.py  taskiq_tasks.py  taskiq_utils.py  taskiq_worker.py  vectorization_listener.py
db_folder/: Dockerfile
docs/: AGENTS.md  MultiAgents-RTCROS.md  README.md  README_FLOWER_MONITORING.md  architecture.md  celery_optimization_config.md  docker_build.md  flower_permissions_fix.md  flower_test_commands.md  implementation_plan.md  optimized_scan_architecture.md  plan_optimisation_scan.md  scan_optimization_plan.md  websocket_refactor.md
frontend/: .dockerignore  Dockerfile  _version_.py  config.py  entrypoint.sh  main.py  requirements.txt  start_ui.py
frontend-old/: main.py  start_ui.py
helpers/: logging.py
logs/: ruff_report_20260103_174208.txt
ollama/: entrypoint.sh  id_ed25519  id_ed25519.pub
plans/: simplify_chat_plan.md
scripts/: celery_heartbeat_diagnostic.py  check_celery_metrics.py  check_celery_metrics_local.py  convert_genre.py  diagnostic_audio_tags.py  diagnostic_data_permissions.py  diagnostic_flower_db.py  fix_database_columns.ps1  fix_track_mir_synthetic_tags_columns.sql  fix_worker_imports_to_api.py  fix_worker_models_imports.py  flower_entrypoint_fixed.sh  healthcheck.sh  migrate_sqlite_to_postgres.py  migrate_tools.py  populate_fts.py  populate_whoosh_index.py  rebuild_worker_with_cache.sh  reset_db.py  ruff_auto_fix.py  ruff_validation.py  test_api_url.py  test_celery_autoscale.py  test_graphql_fix.py  test_graphql_track_mutation.json  test_llm_service.py  (+7 more)
(+1669 files in other folders)
