[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools-scm>=8"  # Assure-toi d'avoir une version récente
]
build-backend = "setuptools.build_meta"

[project]
name = "soniquebay-app"
dynamic = ["version"]
description = "Music server with in app playback"
authors = [{ name = "David orel", email = "d.orel@free.fr" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools_scm]
version_scheme = "post-release"   # Génère style "1.0.0.post1"
local_scheme = "node-and-date" # Pas d'info locale type "+githash"
write_to = "src/soniquebay_app/_version_.py" # Crée un fichier pour pouvoir lire la version dans le code
