[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools-scm>=8"  # Assure-toi d'avoir une version récente
]
build-backend = "setuptools.build_meta"

[project]
name = "soniquebay-app"
dynamic = ["version"]
description = "Music server with in app playback"
authors = [{ name = "David orel", email = "d.orel@free.fr" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools_scm]
version_scheme = "guess-next-dev"  # Changement du scheme pour mieux gérer les versions de dev
local_scheme = "dirty-tag"  # Meilleure détection des changements
write_to = "src/soniquebay_app/_version_.py"
fallback_version = "0.0.1"  # Version par défaut si git n'est pas disponible
version_file = "src/soniquebay_app/_version_.py"
git_describe_command = ["git describe --dirty --tags --long --match v*"]  # Commande git plus précise
