[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools-scm>=8",
    "pip"  # Assure-toi d'avoir une version récente
]
build-backend = "setuptools.build_meta"

[project]
name = "soniquebay-app"
dynamic = ["version"]
description = "Music server with in app playback"
authors = [{ name = "David orel", email = "d.orel@free.fr" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "cachetools>=6.0.0",
    "cryptography>=45.0.4",
    "fastapi>=0.104.1",
    "librosa>=0.11.0",
    "mutagen>=1.47.0",
    "nicegui>=1.0.0",
    "tinydb>=4.8.2",
    "whoosh-reloaded>=2.7.5",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"
write_to = "src/soniquebay_app/_version_.py"
fallback_version = "0.1.0"  # Version utilisée si git n'est pas trouvé
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long"]
